Rulesets and singleton classes
git-svn-id: svn://svn.code.sf.net/p/cgsuite/code/cgsuite/branches/devel@502 0138b134-6283-4d47-a013-9bc70bc83b06